Fix spacing on contact page

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -29,7 +29,7 @@
 			1px -1px 0 $color-white,
 			-1px 1px 0 $color-white,
 				1px 1px 0 $color-white;
-		top: 45%;
+		top: 40%;
 		transform: translate(-50%, -50%);
 		width: 100%;
 
@@ -50,7 +50,7 @@
 		position: absolute;
 		text-align: center;
 		text-decoration: none;
-		top: 45%;
+		top: 40%;
 		transform: translate(-50%, -50%);
 		z-index: 2;
 
